# finite-element-mesh-loader

./: .gitignore  AneuMeshLoader.cpp  AneuMeshLoader.h  CMakeLists.txt  DataStructures.cpp  DataStructures.h  Exceptions.h  LR1_Razrabotka_KE_zagruzchika_setki.docx  MeshLoader.cpp  MeshLoader.h  NeuMeshLoader.cpp  NeuMeshLoader.h  README.md  main.cpp
a-neu-files/: cube.aneu  cube.neu  ellipsoid.aneu  ellipsoid.neu
